fix width & gap column

--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,7 @@ img {
   justify-content: space-between;
   margin-top: 40px;
   flex-wrap: wrap;
+  gap: 20px;
 }
 
 .plans-col{
@@ -198,6 +199,8 @@ img {
   border: 1px solid #dddddd;
   border-radius: 8px;
   flex-basis: calc(100% / 3 - 20px);
+  flex-grow: 1;
+  /* gap: 10px; */
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -305,12 +308,6 @@ img {
 
 .plans-features li {
   padding: 10px 0;
-}
-
-
-.full-width {
-    flex-basis: 100%;
-    margin-top: 20px;
 }
 
 
